--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,8 @@
     "removeComments": true,
     "outDir": "./dist",
     "typeRoots": [
-      "node_modules/@types",
-      "node_modules/@netgum/types/bn.js",
-      "node_modules/@netgum/types/idna-uts46-hx",
-      "node_modules/@netgum/types/keccak",
-      "node_modules/@netgum/types/secp256k1"
+      "./node_modules/@types",
+      "./node_modules/@netgum/types/node"
     ],
     "lib": [
       "dom",
@@ -27,7 +24,7 @@
     "src/**/*"
   ],
   "exclude": [
-    "src/**/*.spec.ts",
+    "src/**/*.test.ts",
     "dist/**/*"
   ]
 }
