--- a/package.json
+++ b/package.json
@@ -16,34 +16,34 @@
     "url": "https://github.com/netgum/utils/issues"
   },
   "scripts": {
-    "ts:lint": "tslint --project tsconfig.json src/**/*.ts",
-    "ts:compile": "tsc",
-    "prebuild": "npm run ts:lint && rimraf ./dist/*",
-    "build": "npm run ts:compile",
+    "lint": "tslint --project ./tsconfig.json ./src/**/*.ts",
+    "compile": "tsc --project ./tsconfig.build.json --rootDir ./src",
+    "prebuild": "npm run lint && rimraf ./dist/*",
+    "build": "npm run compile",
     "postbuild": "tempack ./dist/",
-    "pretest": "npm run ts:lint",
+    "pretest": "npm run lint",
     "test": "jest",
     "test:watch": "jest --watch --verbose false"
   },
   "dependencies": {
     "bn.js": "^4.11.8",
-    "idna-uts46-hx": "^2.3.1",
-    "keccak": "^1.4.0",
-    "secp256k1": "^3.5.2",
-    "unorm": "^1.4.1"
+    "idna-uts46-hx": "^3.0.0",
+    "keccak": "^2.0.0",
+    "secp256k1": "^3.6.2",
+    "unorm": "^1.5.0"
   },
   "devDependencies": {
-    "@netgum/types": "0.0.4",
-    "@types/jest": "^23.3.10",
-    "@types/node": "^10.12.12",
-    "jest": "^23.6.0",
-    "rimraf": "^2.6.2",
+    "@netgum/types": "^0.1.0",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.4",
+    "jest": "^24.7.1",
+    "rimraf": "^2.6.3",
     "tempack": "^1.1.0",
-    "ts-jest": "^23.10.5",
-    "tslint": "^5.11.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.15.0",
     "tslint-config-airbnb": "^5.11.1",
-    "tsutils": "^3.5.2",
-    "typescript": "^3.2.2"
+    "tsutils": "^3.10.0",
+    "typescript": "^3.4.3"
   },
   "jest": {
     "testEnvironment": "node",
