--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,16 @@
 {
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
     "moduleResolution": "node",
-    "sourceMap": false,
-    "declaration": true,
+    "skipLibCheck": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
+    "declaration": true,
+    "module": "commonjs",
+    "target": "es2016",
     "removeComments": true,
-    "outDir": "./dist",
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@netgum/types/node"
@@ -22,9 +24,5 @@
   },
   "include": [
     "src/**/*"
-  ],
-  "exclude": [
-    "src/**/*.test.ts",
-    "dist/**/*"
   ]
 }
