--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/netgum/utils.git"
+    "url": "https://github.com/netgum/netgum-utils.git"
   },
   "bugs": {
-    "url": "https://github.com/netgum/utils/issues"
+    "url": "https://github.com/netgum/netgum-utils/issues"
   },
   "scripts": {
     "lint": "tslint --project ./tsconfig.json ./src/**/*.ts",
@@ -33,17 +33,17 @@
     "unorm": "^1.5.0"
   },
   "devDependencies": {
-    "@netgum/types": "^0.1.1",
-    "@types/jest": "^24.0.11",
-    "@types/node": "^11.13.4",
-    "jest": "^24.7.1",
+    "@netgum/types": "^0.1.3",
+    "@types/jest": "^24.0.12",
+    "@types/node": "^12.0.0",
+    "jest": "^24.8.0",
     "rimraf": "^2.6.3",
     "tempack": "^1.1.0",
     "ts-jest": "^24.0.2",
-    "tslint": "^5.15.0",
+    "tslint": "^5.16.0",
     "tslint-config-airbnb": "^5.11.1",
     "tsutils": "^3.10.0",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.5"
   },
   "jest": {
     "testEnvironment": "node",
